--- a/header_footer/footer_sg.html
+++ b/header_footer/footer_sg.html
@@ -1,3 +1,4 @@
+<!-- Footer Update 12May2020 -->
 <footer class="page-footer">
     <div class="footer content">
         <script type="text/javascript">
@@ -7,7 +8,10 @@
                 $('#msp-recaptcha-58312e2256fb5bcda606e9b5046e00ef-container')
                     .appendTo('#newsletter-validate-detail');
             });
+
+
         </script>
+
     </div>
 
 
@@ -135,6 +139,7 @@
                                     <div class="newsletter-content">
                                         {{widget type="Magento\Cms\Block\Widget\Block"
                                         template="widget/static_block/default.phtml" block_id="78"}}
+
                                     </div>
                                 </div>
 
@@ -210,6 +215,8 @@
                                                 has
                                                 its story. Make yours one that stands the test of time.
                                             </div>
+
+
                                         </div>
                                     </div>
                                 </div>
@@ -228,7 +235,7 @@
                                                             Conditions</a>
                                                     </li>
                                                     <li><a href="{{store url='privacy-policy'}}">Privacy</a></li>
-                                                    <li><a href="{{store url=''}}faq#conflict-free-diamonds">Conflict
+                                                    <li><a href="{{store url=''}}faq#faq-conflict">Conflict
                                                             Free
                                                             Diamonds</a></li>
                                                     <!-- <li><a href="{{store url='blog/share-your-love-story'}}">Submit Love
@@ -243,18 +250,18 @@
                                                 <ul id="footer-content-3" class="footer-link hover-link01"
                                                     data-role="content">
                                                     <li><a href="{{store url='faq'}}">Free Shipping Worldwide</a></li>
-                                                    <li><a href="{{store url=''}}faq#custom-made-products">Custom-Made
+                                                    <li><a href="{{store url=''}}faq#faq-custom">Custom-Made
                                                             Orders</a></li>
-                                                    <li><a href="{{store url=''}}faq#14-day-return-policy">14-Day
+                                                    <li><a href="{{store url=''}}faq#faq-14day">14-Day
                                                             Returns</a></li>
-                                                    <li><a href="{{store url=''}}faq#ring-size--resizing-">Ring Size
+                                                    <li><a href="{{store url=''}}faq#faq-ringsize">Ring Size
                                                             &amp;
                                                             Resizing</a></li>
-                                                    <li><a href="{{store url=''}}faq#diamond-upgrade-program">Diamond
+                                                    <li><a href="{{store url=''}}faq#faq-upgrade">Diamond
                                                             Upgrade Program</a></li>
-                                                    <li><a href="{{store url=''}}faq#diamond-price-match-program">Diamond
+                                                    <li><a href="{{store url=''}}faq#faq-price">Diamond
                                                             Price Matching</a></li>
-                                                    <li><a href="{{store url=''}}faq#lifetime-warranty">Lifetime
+                                                    <li><a href="{{store url=''}}faq#faq-lifetime">Lifetime
                                                             Warranty</a></li>
                                                     <li><a href="{{store url='request-ring-sizer'}}">Free Ring Sizer</a>
                                                     </li>
@@ -290,6 +297,7 @@
                                         <li class="Master"></li>
                                         <li class="American"></li>
                                     </ul> -->
+
                                     <img src="https://www.michaeltrio.com/pub/media/0menu/3rdparty.png" alt=""
                                         style="width: 200px;" />
                                 </div>
@@ -315,8 +323,9 @@
                                         <li class="Master"></li>
                                         <li class="American"></li>
                                     </ul> -->
+
                                     <img src="https://www.michaeltrio.com/pub/media/0menu/3rdparty.png" alt=""
-                                        style="width: 200px;" />
+                                        style="width: 157px;" />
                                 </div>
                             </div>
                         </div>
@@ -385,6 +394,14 @@
                                                 has
                                                 its story. Make yours one that stands the test of time.
                                             </div>
+                                            <center><a href="https://www.michaeltrio.com/make-an-appointment/"
+                                                    class="btn btn-grey large-btn " role="button" style="color: #705142 !important;
+                                                    background: #ffbe9f !important;
+                                                    font-weight: 500;
+                                                    height: auto;
+                                                    width: 289px;">
+                                                    Book An Appointment
+                                                </a></center>
                                         </div>
                                     </div>
                                 </div>
@@ -461,6 +478,29 @@
                                                     </li>
 
 
+                                                    <li>
+                                                        <h5> TAMPINES 1</h5>
+                                                        <div class="">
+                                                            <p class="h9 ">
+                                                                10 Tampines Central 1, #01-13,<br>
+                                                                Singapore 529536<br>
+
+                                                                Monday - Thursday: 11am - 9pm<br>
+                                                                Friday - Sunday: 11am - 9.30pm<br>
+
+                                                                (Last appointment at 8.30pm)
+                                                            </p>
+                                                            <p class="h9 company-contact">
+                                                                Call: <a href="tel:++6569667525"> +65 6966 7525</a><br>
+                                                                Email: <a
+                                                                    href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
+                                                            </p>
+                                                        </div>
+
+                                                    </li>
+
+
+
                                                 </ul>
                                             </div>
                                         </div>
@@ -481,12 +521,12 @@
                                                             Conditions</a>
                                                     </li>
                                                     <li><a href="{{store url='privacy-policy'}}"> Privacy</a></li>
-                                                    <li><a href="{{store url=''}}faq#conflict-free-diamonds"> Conflict
+                                                    <li><a href="{{store url=''}}faq#faq-conflict"> Conflict
                                                             Free
                                                             Diamonds</a></li>
-                                                    <!-- <li><a href="{{store url='blog/share-your-love-story'}}"> Submit
-                                                            Love
-                                                            Story</a></li> -->
+                                                    <li><a href="{{store url='refer-a-friend'}}">
+                                                            Refer A Friend
+                                                        </a></li>
                                                     <li><a href="{{store url='faq'}}"> FAQs</a></li>
                                                 </ul>
                                             </div>
@@ -501,19 +541,18 @@
                                                 <ul id="footer-content-3" class="footer-link hover-link01"
                                                     data-role="content">
                                                     <li><a href="{{store url='faq'}}"> Free Shipping Worldwide</a></li>
-                                                    <li><a href="{{store url=''}}faq#custom-made-products"> Custom-Made
+                                                    <li><a href="{{store url=''}}faq#faq-custom">Custom-Made
                                                             Orders</a></li>
-                                                    <li><a href="{{store url=''}}faq#14-day-return-policy"> 14-Day
+                                                    <li><a href="{{store url=''}}faq#faq-14day">14-Day
                                                             Returns</a></li>
-                                                    <li><a href="{{store url=''}}faq#ring-size--resizing-"> Ring Size
+                                                    <li><a href="{{store url=''}}faq#faq-ringsize">Ring Size
                                                             &amp;
                                                             Resizing</a></li>
-                                                    <li><a href="{{store url=''}}faq#diamond-upgrade-program"> Diamond
+                                                    <li><a href="{{store url=''}}faq#faq-upgrade">Diamond
                                                             Upgrade Program</a></li>
-                                                    <li><a href="{{store url=''}}faq#diamond-price-match-program">
-                                                            Diamond
+                                                    <li><a href="{{store url=''}}faq#faq-price">Diamond
                                                             Price Matching</a></li>
-                                                    <li><a href="{{store url=''}}faq#lifetime-warranty"> Lifetime
+                                                    <li><a href="{{store url=''}}faq#faq-lifetime">Lifetime
                                                             Warranty</a></li>
                                                     <li><a href="{{store url='request-ring-sizer'}}"> Free Ring
                                                             Sizer</a>
@@ -536,6 +575,7 @@
                                                 </ul>
                                             </div>
                                         </div>
+
 
                                         <div class="col-sm-8">
                                             <a href="{{store url='request-ring-sizer'}}" style="text-decoration: none;">
@@ -571,7 +611,9 @@
                                                 data-validate="{required:true, 'validate-email':true}"
                                                 class="form-control">
                                             <span class="input-group-btn">
-                                                <button class="btn btn-default btn-grey" type="submit">Submit</button>
+                                                <button class="btn btn-default btn-grey" type="submit" style="color: #705142 !important;
+                                                background: #ffbe9f !important;
+                                                font-weight: 500;">Submit</button>
                                             </span>
                                         </div>
 
@@ -702,9 +744,8 @@
                                     </ul> -->
 
                                     <img src="https://www.michaeltrio.com/pub/media/0menu/3rdparty.png" alt=""
-                                        style="width: 200px;" />
+                                        style="width: 157px;" />
                                 </div>
-
                             </div>
 
                             <div class="col-sm-12">
@@ -726,9 +767,6 @@
                                         <li class="Master"></li>
                                         <li class="American"></li>
                                     </ul> -->
-
-                                    <img src="https://www.michaeltrio.com/pub/media/0menu/3rdparty.png" alt=""
-                                        style="width: 200px;" />
                                 </div>
                             </div>
                         </div>
@@ -737,11 +775,10 @@
             </div>
         </div>
     </div>
+
 </footer>
 
-
 {{block class="Michaeltrio\Customer\Block\Contact" name="modal.contact" template="contact-modal.phtml"}}
-
 
 <div class="modals-wrapper">
 
@@ -861,11 +898,9 @@
     });
 </script>
 
-
 <script>
     require(['jquery'], function ($) {
         $(document).ready(function () {
-
             $(".footer-collapse").click(function () {
                 var x = $(this).attr("aria-selected");
                 if (x === "true") {
@@ -873,9 +908,7 @@
                 } else if (x === "false") {
                     $(this).addClass("active");
                 }
-
             });
-
         });
     });
 </script>
