--- a/landing_pages/home.html
+++ b/landing_pages/home.html
@@ -319,6 +319,13 @@
         }
 
         @media (max-width: 1199.98px) {
+            #choose-setting.owl-carousel .owl-item img {
+                width: 150px !important;
+            }
+
+            #choose-setting.owl-carousel .owl-item.center img {
+                width: 235px !important;
+            }
 
             .diamond-image img {
                 width: 320px;
@@ -727,7 +734,7 @@
         .home-jewel {
             position: relative;
             margin-top: 150px;
-            background-color: #fff4f1;
+            background-color: #f7e6dd;
         }
 
         .home-jewel::before {
@@ -739,7 +746,7 @@
             font-size: 8rem;
             text-transform: uppercase;
             font-weight: 700;
-            color: #fff4f1;
+            color: #f7e6dd;
             opacity: 0.7;
         }
 
@@ -1090,14 +1097,14 @@
                                     </article>
                                 </div>
 
-                                <div class="item">
+                                <!-- <div class="item">
                                     <article class="text-center">
                                         <figure><a href="{{store url='engagement-rings/side-stone'}}"><img
                                                     src="https://www.michaeltrio.com/pub/media/0newengagementpage/Side_Stone-MSR0063-18KW.jpg"></a>
                                         </figure>
                                         <a href="{{store url='engagement-rings/side-stone'}}">Side Stone</a>
                                     </article>
-                                </div>
+                                </div> -->
                                 <div class="item">
                                     <article class="text-center">
                                         <figure><a href="{{store url='engagement-rings/vintage'}}"><img
@@ -1114,6 +1121,16 @@
                                         <a href="{{store url='engagement-rings/halo'}}">Halo</a>
                                     </article>
                                 </div>
+                                <div class="item">
+                                    <article class="text-center">
+                                        <figure><a href="{{store url='engagement-rings/channel-set'}}"><img
+                                                    src="https://www.michaeltrio.com/pub/media/0newengagementpage/Channel_Set-MSR0033F-18KW.jpg"></a>
+                                        </figure>
+                                        <a href="{{store url='engagement-rings/channel-set'}}">Channel-Set</a>
+                                    </article>
+                                </div>
+
+
 
                             </div>
 
