--- a/landing_pages/our-story.html
+++ b/landing_pages/our-story.html
@@ -8,12 +8,8 @@
             box-sizing: border-box;
         }
 
-        .ourStory h3 {
-            text-align: center;
-        }
-
         .spaceDIV {
-            margin: 10px 0;
+            margin: 30px 0;
         }
 
         .greyBG {
@@ -28,7 +24,8 @@
             padding: 0 10px;
         }
 
-        #yearSlider .item-desc {
+        #yearSlider .item-desc,
+        #showrooms .item-desc {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -36,9 +33,15 @@
             min-height: 100px;
         }
 
+        #showrooms .item-desc {
+            min-height: auto !important;
+            padding: 15px 0px;
+        }
+
         #yearSlider .item-desc div {
             padding: 10px;
         }
+
 
         @media (max-width: 767.98px) {
             #yearSlider .item {
@@ -52,10 +55,17 @@
 
     <div class="ourStory">
         <div class="container">
-            <div class="greyBG height-150"></div>
+            <!-- <div class="greyBG height-150">
+            </div> -->
+            <img src="https://www.michaeltrio.com/pub/media/wysiwyg/our_story/Header_img.jpg" alt="" class="w-100">
             <div class="spaceDIV"></div>
 
-            <h3>Our Story</h3>
+            <div class="text-center">
+                <h2>Our Story</h2>
+                <h5>At Michael Trio, we confidently provides <br>
+
+                    quality products and excellent services at remarkable prices</h5>
+            </div>
             <div class="spaceDIV"></div>
 
 
@@ -71,9 +81,10 @@
 }}}}}'>
                 <div class="item">
 
-                    <div class="greyBG height-150 ">
+                    <!-- <div class="greyBG height-150 ">
                         1
-                    </div>
+                    </div> -->
+                    <img src="https://www.michaeltrio.com/pub/media/wysiwyg/our_story/M_img_4.jpg" alt="" class="w-100">
                     <div class="item-desc">
                         <div class="col-xs-4">
                             <h1>1876</h1>
@@ -89,9 +100,11 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="greyBG height-150 ">
+                    <!-- <div class="greyBG height-150 ">
                         2
-                    </div>
+                    </div> -->
+                    <img src="https://www.michaeltrio.com/pub/media/wysiwyg/our_story/M_img_6.jpg" alt="" class="w-100">
+
                     <div class="item-desc">
                         <div class="col-xs-4">
                             <h1>2013</h1>
@@ -106,9 +119,11 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="greyBG height-150 ">
+                    <!-- <div class="greyBG height-150 ">
                         3
-                    </div>
+                    </div> -->
+                    <img src="https://www.michaeltrio.com/pub/media/wysiwyg/our_story/M_img_8.jpg" alt="" class="w-100">
+
                     <div class="item-desc">
                         <div class="col-xs-4">
                             <h1>2014</h1>
@@ -123,9 +138,12 @@
                 </div>
 
                 <div class="item">
-                    <div class="greyBG height-150 ">
+                    <!-- <div class="greyBG height-150 ">
                         4
-                    </div>
+                    </div> -->
+                    <img src="https://www.michaeltrio.com/pub/media/wysiwyg/our_story/M_img_10.jpg" alt=""
+                        class="w-100">
+
                     <div class="item-desc">
                         <div class="col-xs-4">
                             <h1>2019</h1>
@@ -138,9 +156,12 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="greyBG height-150 ">
-                        4
-                    </div>
+                    <!-- <div class="greyBG height-150 ">
+                        5
+                    </div> -->
+                    <img src="https://www.michaeltrio.com/pub/media/wysiwyg/our_story/M_img_11.jpg" alt=""
+                        class="w-100">
+
                     <div class="item-desc">
                         <div class="col-xs-4">
                             <h1>2021</h1>
@@ -153,9 +174,12 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="greyBG height-150 ">
-                        4
-                    </div>
+                    <!-- <div class="greyBG height-150 ">
+                        6
+                    </div> -->
+                    <img src="https://www.michaeltrio.com/pub/media/wysiwyg/our_story/M_img_12.jpg" alt=""
+                        class="w-100">
+
                     <div class="item-desc">
                         <div class="col-xs-4">
                             <h1>2021</h1>
@@ -172,33 +196,82 @@
             </div>
 
             <div class="spaceDIV"></div>
-            <h3>Cost Saving</h3>
+            <div class="text-center">
+                <h2>Cost Saving</h2>
+                <h5>Book your appointment now and enjoy a free consultation to learn more about our products <br> and
+                    receive
+                    valuable diamond and gemstone education!</h5>
+
+            </div>
             <div class="spaceDIV"></div>
 
             <div class="px-5">
                 <div class="row px-5">
-                    <div class="col-xs-xs-12">
-                        <div class="greyBG height-150"></div>
+                    <div class="col-xs-12">
+                        <!-- <div class="greyBG height-150"></div> -->
+                        <img src="https://www.michaeltrio.com/pub/media/wysiwyg/our_story/M_img_1.jpg" alt=""
+                            class="w-100">
                     </div>
-                    <div class="col-xs-xs-12">
-                        <div class="greyBG height-150"></div>
+                    <div class="col-xs-12">
+                        <!-- <div class="greyBG height-150"></div> -->
+                        <img src="https://www.michaeltrio.com/pub/media/wysiwyg/our_story/M_img_2.jpg" alt=""
+                            class="w-100">
+
                     </div>
                 </div>
             </div>
 
             <div class="spaceDIV"></div>
-            <h3>Our Showrooms</h3>
+            <div class="text-center">
+                <h2>Our Showrooms</h2>
+                <h5>Book your appointment now and enjoy a free consultation to learn more about our products and receive
+                    valuable<br> diamond and gemstone education!</h5>
+            </div>
             <div class="spaceDIV"></div>
 
-            <div class="row mx-0">
-                <div class="col-xs-xs-8">
-                    <div class="greyBG height-150"></div>
+            <div class="row mx-0" id="showrooms">
+                <div class="col-xs-6">
+                    <!-- <div class="greyBG height-150"></div> -->
+                    <a href="https://www.michaeltrio.com/make-an-appointment">
+                        <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/store-tjp.jpg" alt=""
+                            class="w-100">
+                        <div class="item-desc">
+                            TANJONG PAGAR
+                        </div>
+                    </a>
                 </div>
-                <div class="col-xs-xs-8">
-                    <div class="greyBG height-150"></div>
+                <div class="col-xs-6">
+                    <!-- <div class="greyBG height-150"></div> -->
+                    <a href="https://www.michaeltrio.com/make-an-appointment">
+
+                        <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/store-jem.jpg" alt=""
+                            class="w-100">
+                        <div class="item-desc">
+                            JEM
+                        </div>
+                    </a>
                 </div>
-                <div class="col-xs-xs-8">
-                    <div class="greyBG height-150"></div>
+                <div class="col-xs-6">
+                    <!-- <div class="greyBG height-150"></div> -->
+                    <a href="https://www.michaeltrio.com/make-an-appointment">
+
+                        <img src="https://d213t4exkgxsjh.cloudfront.net/assets/images/store-np.jpg" alt=""
+                            class="w-100">
+                        <div class="item-desc">
+                            NORTHPOINT CITY
+                        </div>
+                    </a>
+                </div>
+                <div class="col-xs-6">
+                    <!-- <div class="greyBG height-150"></div> -->
+                    <a href="https://www.michaeltrio.com/make-an-appointment">
+
+                        <img src="https://www.michaeltrio.com/pub/media/0appointment/tampines_shop_pic.jpg" alt=""
+                            class="w-100">
+                        <div class="item-desc">
+                            TAMPINES 1
+                        </div>
+                    </a>
                 </div>
 
             </div>
