--- a/3d/earrings.html
+++ b/3d/earrings.html
@@ -1035,7 +1035,8 @@
 
             <h1 class="text-center"> Diamond Type</h1>
 
-            <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('EISI2020_NoItem',0)">
+            <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('EISI2020_NoItem',0)"
+              style="display: none;">
               <div class="diamond-thumbnail bg-white py-3">
                 <div class="diamond-quality">
                   <i class="fa fa-diamond pr-2 fa-green" aria-hidden="true"></i> Lab Grown
@@ -1135,7 +1136,8 @@
 
             <h1 class="text-center"> Diamond Type</h1>
 
-            <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('EL2020_NoItem',0)">
+            <div class="col-xs-8 text-center diamond-type " onclick="activeQuality('EL2020_NoItem',0)"
+              style="display: none;">
               <div class="diamond-thumbnail bg-white py-3">
                 <div class="diamond-quality">
                   <i class="fa fa-diamond pr-2 fa-green" aria-hidden="true"></i> Lab Grown
