--- a/content_pages/contact.html
+++ b/content_pages/contact.html
@@ -683,17 +683,50 @@
         .mt2021 .ring-sizer a:hover {
             color: var(--darkblue) !important;
         }
+
+
+
+        .address-title {
+            margin-bottom: 10px;
+            padding-bottom: 10px !important;
+            border-bottom: 1px solid;
+        }
+
+        .address-title::after {
+            content: "\e97b";
+            position: absolute;
+            right: 17px;
+            font-family: jewelfont;
+        }
+
+        .address-title.active::after {
+            content: "\e96b";
+        }
     </style>
 
 
     <script>
-        require(['jquery'], function ($) {
 
+        require(['jquery'], function ($) {
             $(document).ready(function () {
 
-                var submit = $('button');
-                submit.removeClass(" action submit primary");
-                submit.addClass("btn btn-blue small-btn");
+                $("button.action.submit.primary").removeClass("action submit primary");
+                $("button").addClass("btn btn-blue small-btn");
+
+                $(".address-content").hide();
+
+                $(".address-title").click(function () {
+                    $(this).siblings().toggle(500);
+
+                    if ($(this).hasClass("active")) {
+                        $(this).removeClass("active");
+                    } else {
+                        $(this).addClass("active");
+                    }
+
+                });
+
+
 
             });
         });
@@ -712,7 +745,7 @@
                     Check out our Frequently ask Questions (FAQ) page for common inquiries.</p>
                 <div class=" pt-5">
 
-                    <div class="col-md-12 ">
+                    <div class="col-sm-12 ">
 
                         <div class="mb-5 ">
                             {{block class="Michaeltrio\Customer\Block\Contact"
@@ -722,8 +755,8 @@
 
                     </div>
 
-                    <div class="col-md-12">
-                        <div>
+                    <div class="col-sm-12">
+                        <div class="hidden-xs">
                             <h5 class=" mb-4 font-weight-normal">Showrooms</h5>
 
                             <div class="mb-5">
@@ -817,12 +850,125 @@
                             </div>
 
                         </div>
+
+                        <!-- Mobile View  -->
+                        <div class="visible-xs">
+                            <h5 class=" mb-4 font-weight-normal">Showrooms</h5>
+
+                            <div class="mb-2 address">
+                                <h6 class="font-weight-bold text-brown  address-title">TANJONG PAGAR</h6>
+                                <div class="address-content">
+                                    <p class="py-3 h9">91 Tanjong Pagar Road<br />
+                                        Singapore 088512<br />
+                                        Monday - Sunday: 12pm - 8.30pm
+
+                                    </p>
+
+                                    <p class="h9">
+                                        Call: <a href="tel:+6562990110"> +65 6299 0110</a>
+                                        <br />
+
+                                        Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
+                                    </p>
+                                    <div class="h13 mb-5"> *Last appointment will be 1 hour before closing!
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="mb-2 address">
+                                <h6 class="font-weight-bold text-brown address-title">JEM</h6>
+                                <div class="address-content">
+                                    <p class="py-3 h9">50 Jurong Gateway Road, #01-60, <br />
+                                        Singapore 608549 <br />
+                                        Monday - Thursday: 11am - 9pm <br />
+
+                                        Friday - Sunday: 11am - 9.30pm
+
+                                    </p>
+
+                                    <p class="h9">
+                                        Call: <a href="tel:+6569513296"> +65 6951 3296</a>
+                                        <br />
+
+                                        Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
+
+                                    </p>
+                                    <div class="h13 mb-5"> *Last appointment will be 1 hour before closing!
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="mb-2 address">
+                                <h6 class="font-weight-bold text-brown address-title">NORTHPOINT CITY</h6>
+                                <div class="address-content">
+                                    <p class="py-3 h9">
+                                        Yishun Avenue 2, North Wing, #01-22 Northpoint City <br />
+                                        Singapore 769098 <br />
+                                        Monday - Thursday: 11am - 9pm <br />
+
+                                        Friday - Sunday: 11am - 9.30pm <br />
+
+                                    </p>
+
+                                    <p class="h9">
+                                        Call: <a href="tel:+6569691492"> +65 6969 1492</a>
+                                        <br />
+
+                                        Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
+
+
+                                    </p>
+                                    <div class="h13 mb-5"> *Last appointment will be 1 hour before closing!
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="mb-2 address">
+
+                                <h6 class="font-weight-bold text-brown address-title">TAMPINES 1</h6>
+                                <div class="address-content">
+                                    <p class="py-3 h9">
+                                        10 Tampines Central 1, #01-13,<br />
+                                        Singapore 529536<br />
+
+
+                                        Monday - Thursday: 11am - 9pm <br />
+
+                                        Friday - Sunday: 11am - 9.30pm <br />
+
+                                    </p>
+
+                                    <p class="h9">
+                                        Call: <a href="tel:+6569667525"> +65 6966 7525</a>
+                                        <br />
+
+                                        Email: <a href="mailto:service@michaeltrio.com">service@michaeltrio.com</a>
+
+
+                                    </p>
+                                    <div class="h13 mb-5"> *Last appointment will be 1 hour before closing!
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="mb-5">
+                                <p class="h9"> Priority give to appointment*</p>
+                            </div>
+
+
+                        </div>
+                        <!-- Mobile View End -->
+
                     </div>
+
                 </div>
             </div>
 
         </section>
     </div>
+
+
+
 </body>
 
 </html>
